# llm-zoomcamp

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
01-agentic-rag/: homework.py  rag.py  solutions.md
02-vector-search/: homework.py  solutions.md
